--- a/server/pom.xml
+++ b/server/pom.xml
@@ -10,7 +10,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>testapp</artifactId>
+    <artifactId>server</artifactId>
 
     <properties>
         <java.version>1.8</java.version>
